--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
                             disfrutar de un momento único, nuestro bar te espera con puertas abiertas y experiencias que no querrás perder.
                         </p>
                         <div class="btn-masinfo-container">
-                            <a href="/Más Información/index.html" class="boton-mas-informacion">Más información</a>
+                            <a href="https://drink-bar1.github.io/_Drink-Bar-Nosotros_/" class="boton-mas-informacion">Más información</a>
                         </div>        
                     </div>
                     <div class="Horario">
