--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                         </div>
                     </div>
                     <div class="footer-redes-sociales">
-                        <h4>Redes Sociales</h4>>
+                        <h4>Redes Sociales</h4>
                         <div class="redes-sociales">
                             <div class="social">
                                 <a href="https://www.facebook.com/profile.php?id=61574776851932">
