--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-Pantera-rosa">1L $6000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Pantera-rosa">1/2L $3500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Pantera-rosa">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -116,7 +116,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-San-francisco">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class=" boton-2 btn-San-francisco">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class=" boton-2 btn-San-francisco">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -155,7 +155,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-Mojito">1L $4500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Mojito">1/2L $2500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Mojito">½L $2500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -190,7 +190,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-Sex-on-the-beach">1L $5500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Sex-on-the-beach">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Sex-on-the-beach">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -225,7 +225,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-Blue-lagoon">1L $4500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Blue-lagoon">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Blue-lagoon">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -263,7 +263,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-misil-azul">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-misil-azul">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-misil-azul">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -295,7 +295,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-piña-colada">1L $5500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-piña-colada">1/2L $3500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-piña-colada">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -330,7 +330,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-esperma-pitufo">1L $6000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-esperma-pitufo">1/2L $3500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-esperma-pitufo">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -362,7 +362,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-frutilla">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-frutilla">1L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-frutilla">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -394,7 +394,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-durazno">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-durazno">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-durazno">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -426,7 +426,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-piña">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-piña">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-piña">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -455,7 +455,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-coca">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-coca">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-coca">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -484,7 +484,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-gancia-sprite">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-gancia-sprite">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-gancia-sprite">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -513,7 +513,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-vodka">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-vodka">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-vodka">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
