--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         <div class="lista-ingredientes-container">
                                             <ul class="lista-ingredientes">
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Vodka</p> 
+                                                    <i class="fa-regular fa-circle"></i><p>Licor de Frutilla</p> 
                                                 </li>
                                                 <li class="ingrediente">
                                                     <i class="fa-regular fa-circle"></i><p>Leche Condensada</p>
@@ -175,7 +175,7 @@
                                         <div class="lista-ingredientes-container">
                                             <ul class="lista-ingredientes">
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Vodka</p> 
+                                                    <i class="fa-regular fa-circle"></i><p>Licor de Durazno</p> 
                                                 </li>
                                                 <li class="ingrediente">
                                                     <i class="fa-regular fa-circle"></i><p>Pulpa de Durazno</p>
@@ -190,7 +190,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-Sex-on-the-beach">1L $5500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Sex-on-the-beach">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Sex-on-the-beach">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -648,7 +648,7 @@
                             <span class="add-cart cart-amanecer">
                                 <a href="http://WA.ME/5493718680474"><i class="fa-solid fa-basket-shopping"></i></a>
                             </span>
-                            <p class="price price-amanecer">$4500</p>
+                            <p class="price price-amanecer">$5000</p>
                         </div>
                     </div>
                     <div class="card-products card-paradise">
