--- a/index.html
+++ b/index.html
@@ -234,40 +234,38 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="slider slider-misil-azul">
+                                <div class="slider slider-dulce-tentacion">
                                     <div class="slider-txt">
                                         <div class="descripcion-container">
-                                            <h2 class="misil-azul">Misil Azul</h2>
+                                            <h2 class="dulce-tentacion">Dulce Tentación</h2>
                                             <p>
-                                                El Misil Azul es pura intensidad y frescura tropical en un vaso, perfecto para quienes buscan algo exótico y visualmente impactante. Contiene:
+                                            El Dulce Tentación es una caricia cremosa al paladar, cada sorbo es un viaje dulce, cremoso y decadente que hace honor a su nombre.Contiene:
                                             </p>    
                                         </div>
                                         <div class="lista-ingredientes-container">
                                             <ul class="lista-ingredientes">
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Licor de Curaçao Azul</p> 
+                                                    <i class="fa-regular fa-circle"></i><p>Licor de Dulce de Leche</p> 
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Vodka</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Dulce de Leche</p>
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Sprite</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Leche Condensada</p>
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Jugo de Limón</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Leche Entersa</p>
                                                 </li>
-                                                <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Pulpa de Piña</p>
-                                                </li>
+                                                
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-misil-azul">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-misil-azul">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-dulce-tentacion">1L $5000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-dulce-tentacion">1/2L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
-                                        <img src="img/coctel-misil azul.png" alt="">
+                                        <img src="img/coctel-dulce tentación.png" alt="">
                                     </div>
                                 </div>
                             </div>
