--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                         </div>
                                     </div>
                                     <div class="slider-img">
-                                        <img src="img/coctel-pantera rosa.png" alt="">
+                                        <img src="img/coctel-pantera rosa2.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -261,7 +261,7 @@
                                         </div>
                                         <div class="botones">
                                             <a href="http://WA.ME/5493718680474" class="boton btn-dulce-tentacion">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-dulce-tentacion">1/2L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-dulce-tentacion">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
