--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img class="logo-2" src="img/logo.png" alt="">
+                    <img class="logo-2" src="Drink Sessions.png" alt="">
                     <div class="redes-sociales">
                             <div class="social">
                                 <a href="https://www.facebook.com/profile.php?id=61574776851932">
@@ -115,8 +115,8 @@
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-San-francisco">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class=" boton-2 btn-San-francisco">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-San-francisco">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class=" boton-2 btn-San-francisco">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -128,34 +128,31 @@
                                 <div class="slider slider-mojito">
                                     <div class="slider-txt">
                                         <div class="descripcion-container">
-                                            <h2 class="Mojito">Mojito</h2>
+                                            <h2 class="Mojito">Caipininha</h2>
                                             <p>
-                                                El Mojito es un respiro tropical en un vaso, 
-                                                donde cada hoja de menta y cada burbuja de soda cuentan historias de mar, sol y libertad. Contiene:
+                                                La Caipininha es un respiro tropical en un vaso, 
+                                                donde trozo de limón y gota de Cachaça cuentan historias de mar, sol y libertad. Contiene:
                                             </p>    
                                         </div>
                                         <div class="lista-ingredientes-container">
                                             <ul class="lista-ingredientes">
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Ron Blanco</p> 
+                                                    <i class="fa-regular fa-circle"></i><p>Cachaça</p> 
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Azúcar Impalpable</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Azúcar</p>
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Menta</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Jugo de Limón</p>
                                                 </li>
                                                 <li class="ingrediente">
                                                     <i class="fa-regular fa-circle"></i><p>Limón</p>
                                                 </li>
-                                                <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Soda</p>
-                                                </li>
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-Mojito">1L $4500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Mojito">½L $2500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-Mojito">1L $5000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Mojito">½L $3000</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -202,30 +199,24 @@
                                 <div class="slider slider-blue-lagoon">
                                     <div class="slider-txt">
                                         <div class="descripcion-container">
-                                            <h2 class="Blue-lagoon">Blue Lagoon</h2>
+                                            <h2 class="Blue-lagoon">Gin Tonic</h2>
                                             <p>
-                                                El Blue Lagoon es un destello cristalino del paraíso, que transporta a aguas paradisíacas y ofrece una laguna de sabor irresistible. Contiene:
+                                                El Gin Tonic es un destello cristalino del paraíso, que transporta a aguas paradisíacas y ofrece una laguna de sabor irresistible. Contiene:
                                             </p>    
                                         </div>
                                         <div class="lista-ingredientes-container">
                                             <ul class="lista-ingredientes">
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Licor de Curaçao Azul</p> 
+                                                    <i class="fa-regular fa-circle"></i><p>Ginebra</p> 
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Vodka</p>
-                                                </li>
-                                                <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Sprite</p>
-                                                </li>
-                                                <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Jugo de Limón</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Agua Tónica</p>
                                                 </li>
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-Blue-lagoon">1L $4500</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Blue-lagoon">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-Blue-lagoon">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-Blue-lagoon">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -292,7 +283,7 @@
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-piña-colada">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-piña-colada">1L $6000</a>
                                             <a href="http://WA.ME/5493718680474" class="boton-2 btn-piña-colada">½L $3500</a>
                                         </div>
                                     </div>
@@ -327,7 +318,7 @@
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-esperma-pitufo">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-esperma-pitufo">1L $6000</a>
                                             <a href="http://WA.ME/5493718680474" class="boton-2 btn-esperma-pitufo">½L $3500</a>
                                         </div>
                                     </div>
@@ -356,11 +347,14 @@
                                                 <li class="ingrediente">
                                                     <i class="fa-regular fa-circle"></i><p>Jugo de Limón</p>
                                                 </li>
+                                                <li class="ingrediente">
+                                                    <i class="fa-regular fa-circle"></i><p>Azúcar</p>
+                                                </li>
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-frutilla">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-frutilla">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-frutilla">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-frutilla">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -388,11 +382,14 @@
                                                 <li class="ingrediente">
                                                     <i class="fa-regular fa-circle"></i><p>Jugo de Limón</p>
                                                 </li>
+                                                <li class="ingrediente">
+                                                    <i class="fa-regular fa-circle"></i><p>Azúcar</p>
+                                                </li>
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-durazno">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-durazno">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-durazno">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-durazno">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -420,11 +417,14 @@
                                                 <li class="ingrediente">
                                                     <i class="fa-regular fa-circle"></i><p>Jugo de Limón</p>
                                                 </li>
+                                                <li class="ingrediente">
+                                                    <i class="fa-regular fa-circle"></i><p>Azúcar</p>
+                                                </li>
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-piña">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-piña">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-daiquiri-piña">1L $5500</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-daiquiri-piña">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -452,8 +452,8 @@
                                             </ul>    
                                         </div>
                                         <div class="botones">
-                                            <a href="http://WA.ME/5493718680474" class="boton btn-coca">1L $5000</a>
-                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-coca">½L $3000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton btn-coca">1L $6000</a>
+                                            <a href="http://WA.ME/5493718680474" class="boton-2 btn-coca">½L $3500</a>
                                         </div>
                                     </div>
                                     <div class="slider-img">
@@ -494,7 +494,7 @@
                                 <div class="slider slider-vodka">
                                     <div class="slider-txt">
                                         <div class="descripcion-container">
-                                            <h2 class="vodka">Vodka con Spite / Baggio</h2>
+                                            <h2 class="vodka">Vodka con Spite / Speed</h2>
                                             <p>
                                                 El vodka con Sprite/Baggio es otro Clásico Argentinos, contiene notas cítricas o frutales que resaltan la suavidad del vodka. Contiene:
                                             </p>    
@@ -505,7 +505,7 @@
                                                     <i class="fa-regular fa-circle"></i><p>Vodka</p> 
                                                 </li>
                                                 <li class="ingrediente">
-                                                    <i class="fa-regular fa-circle"></i><p>Sprite / Baggio</p>
+                                                    <i class="fa-regular fa-circle"></i><p>Sprite / Speed</p>
                                                 </li>
                                             </ul>    
                                         </div>
@@ -847,3 +847,4 @@
         <script src="script.js"></script>    
     </body>
 </html>
+
