--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             </li>
                         </ul>
                     </div>
-                    <img class="logo-2" src="Drink Sessions.png" alt="">
+                    <img class="logo-2" src="img/Drink Sessions.png" alt="">
                     <div class="redes-sociales">
                             <div class="social">
                                 <a href="https://www.facebook.com/profile.php?id=61574776851932">
@@ -793,7 +793,7 @@
                 </div>
                 <div class="info-redes">
                     <div class="footer-logo-container">
-                        <img class="logo-2" src="img/logo.png" alt="">
+                        <img class="logo-2" src="img/Drink Sessions.png" alt="">
                     </div>
                     <div class="links-contacto">
                         <div class=" link link-1">
@@ -847,4 +847,5 @@
         <script src="script.js"></script>    
     </body>
 </html>
+
 
