--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Drink & Bar</title>
+        <title>Drink Sessions</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
         <link rel="stylesheet" href="style.css">
     </head>
@@ -777,17 +777,19 @@
                             disfrutar de un momento único, nuestro bar te espera con puertas abiertas y experiencias que no querrás perder.
                         </p>
                         <div class="btn-masinfo-container">
-                            <a href="https://drink-bar1.github.io/_Drink-Bar-Nosotros_/" class="boton-mas-informacion">Más información</a>
+                            <a href="https://drink-bar1.github.io/_Drink-Sessions-Nosotros_/" class="boton-mas-informacion">Más información</a>
                         </div>        
                     </div>
                     <div class="Horario">
                         <div class="horario-info">
                             <h2>Horario</h2>
-                            <p>Viernes a Domingos: 8 PM - 1 AM</p>
+                            <p>Lunes a Jueves: 8 PM - 12:30 AM</p>
+                            <br>
+                            <p>Viernes a Sabados: 8 PM - 2:00 AM</p>
                         </div>
                         <div class="direccion-info">
                             <h2>Dirección</h2>
-                            <p>Av. España entre San Vicente de Paul y Los Andes</p>
+                            <p>Iatalia 2242</p>
                         </div>
                     </div>    
                 </div>
@@ -847,5 +849,6 @@
         <script src="script.js"></script>    
     </body>
 </html>
+
 
 
